[package]
name = "whoami"
version = "0.1.0"
edition = "2021"
description = 'first rust project.'
repository = 'https://github.com/mahmut-abi/whoami.git'
license = 'LICENSE'

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = "1.0.203"
worker = "0.3.0"

[profile.release]
opt-level = "s"   # optimize for size in release builds
lto = true
strip = true
codegen-units = 1
